<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cnBeta乐读</string>
    <string name="app_version_name">3.5.0</string>
    <string name="author">作者: yy.young@gmail.com</string>
    <string name="copyright">Copyright 2013 jandroid.org</string>


    <string name="ranks">排行榜</string>

    <string name="label_article_content">阅读新闻</string>
    <string name="label_history">历史记录</string>
    <string name="label_topic">主题</string>

    <string name="search_item">Settings</string>

    <string name="refresh_item">刷新</string>
    <string name="more_item">更多选项</string>
    <string name="setting_item">参数设置</string>
    <string name="versionCheck">检查更新</string>
   	<string name="offline_downloader">离线下载</string>
    <string name="aboutus_item">关于</string>
    <string name="comment_item">评论</string>


    <string name="support">支持</string>
    <string name="supported">已支持</string>
    <string name="against">反对</string>
    <string name="againsted">已反对</string>

    <string name="loadmore">更多</string>
    
    <string name="tab_quanbuzixun">全部新闻</string>
    <string name="tab_shishigengxin">实时新闻</string>
    <string name="tab_jingcaipinglun">精彩评论</string>
    <string name="tab_bianjituijian">编辑推荐</string>
    <string name="tab_yuedulishi">历史记录</string>
    <string name="tab_dig">DIG</string>
    <string name="tab_software">软件</string>
    <string name="tab_industry">业界</string>
    <string name="tab_interact">互动</string>
    <string name="tab_zhengwen">新闻正文</string>
    <string name="tab_zuirepinglun">最热评论</string>
    <string name="tab_pinglun">全部评论</string>
    <string name="tab_hot">人气榜</string>
    <string name="tab_argue">争议榜</string>
    <string name="tab_recommend">推荐榜</string>
    <string name="tab_topics">主题分类</string>
    <string name="tab_topic_articles">资讯列表</string>
    <string name="tab_history_article">我的阅读</string>
    <string name="tab_history_comment">我的评论</string>

    <string name="pref_key_cleanCache">cleanCache</string>
    <string name="pref_key_cleanHistory">cleanHistory</string>
    <string name="pref_key_autoCleanHistory">autoCleanHistory</string>
    <string name="pref_key_autoCleanCache">autoCleanCache</string>
    <string name="pref_key_installFont">installFont</string>
    <string name="pref_key_deleteFont">deleteFont</string>
    <string name="pref_key_customFont">customFont</string>
    <string name="pref_key_fontSizeOffset">fontSizeOffset</string>
    <string name="pref_key_signature">signature</string>
    <string name="pref_key_enableImageOnMobileNetwork">loadImageOnPhoneNetwork</string>
    <string name="pref_key_enablePluginOnMobileNetwork">enablePluginOnPhoneNetwork</string>

    <string name="pref_key_nightmode_brightness">nightModeBrightness</string>
    <string name="pref_key_commentListOrderReverse">commentReverseOrder</string>

</resources>
