<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/more_item"
            android:title="@string/more_item"
            android:showAsAction="always"
            android:orderInCategory="101"
            android:icon="@drawable/ic_menu_more">
        <menu>
            <!-- 定义一组允许复选的菜单项 -->
            <group>
                <item
                        android:id="@+id/main"
                        android:title="全部 | 实时 | 历史"/>
                <!-- 定义3个菜单项 -->
                <item
                        android:id="@+id/dig_soft_industry_interact"
                        android:title="DIG | 软件 | 业界 | 互动"/>
                <item
                        android:id="@+id/rank"
                        android:title="人气 | 争议 | 推荐"/>
                <item
                        android:id="@+id/topics"
                        android:title="主题分类阅读"/>
                <item
                        android:id="@+id/offline_downloader"
                        android:title="@string/offline_downloader"/>
                <item
                        android:id="@+id/setting_item"
                        android:title="@string/setting_item"/>
                <item
                        android:id="@+id/aboutus_item"
                        android:title="@string/aboutus_item"/>
            </group>
        </menu>
    </item>
</menu>
